# tailcall

./: .clippy.toml  .codespellignore  .cspell.json  .dockerignore  .gitattributes  .gitignore  .graphqlrc.yml  .prettierignore  .prettierrc  .rustfmt.toml  .scalafix.conf  .scalafmt.conf  BOUNTY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  VendorConfig.toml  a.txt  benchmark.md  bkup  build.rs  build.sbt  codecov.yml  cw-apis.txt  delete.txt  docker.sh  fly.toml  foo  install.sh  lint.sh  main.graphql  mosaic-wellness-1.graphql  mywrk.lua  n_plus.txt  package-lock.json  package.json  pm2.config.js  (+8 more)
async_graphql_apollo_studio_extension/: CHANGELOG.md  Cargo.toml  README.md  build.rs
async_graphql_apollo_studio_extension/example/models/: Cargo.toml
async_graphql_apollo_studio_extension/example/simple/: Cargo.toml
async_graphql_apollo_studio_extension/proto/: reports.proto
async_graphql_apollo_studio_extension/src/: compression.rs  lib.rs  proto.rs  register.rs  runtime.rs
async_graphql_apollo_studio_extension/src/report_aggregator/: mod.rs
autogen/: Cargo.toml
autogen-schema/: Cargo.toml
autogen-schema/src/: main.rs
autogen/src/: document.rs  gen_gql_schema.rs  lib.rs  main.rs  types.rs  writer.rs
autogen/src/writer/: common.rs  deprecated_gen_gql_schema.rs  directive_writer.rs  input_types_writer.rs  mod.rs
aws-lambda/: Cargo.toml
aws-lambda/src/: http.rs  main.rs  runtime.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/cli/: cache.rs  command.rs  env.rs  error.rs  file.rs  fmt.rs  http.rs  mod.rs  tc.rs
cli/tests/: cfg_reader.rs
cloudflare/: Cargo.toml  package-lock.json  package.json  wrangler.toml
cloudflare/.cargo/: config
cloudflare/src/: cache.rs  chrono_cache.rs  env.rs  file.rs  handle.rs  http.rs  http2.rs  kv_cache.rs  lib.rs  proto_resolver.rs  r2_address.rs  runtime.rs  script.rs
cloudflare/tests/: cf_test_handler.rs  cf_tests.spec.ts  io.rs  mf.ts
corex/: Cargo.toml
corex/src/: app_context.rs  cache.rs  directive.rs  lib.rs  mustache.rs  path.rs
corex/src/blueprint/: operation.rs  server.rs  timeout.rs
corex/src/config/: config.rs  group_by.rs  into_document.rs  mod.rs  reader.rs  server.rs  upstream.rs
corex/src/grpc/: data_loader_request.rs  protobuf.rs  request.rs  request_template.rs
corex/src/helpers/: body.rs  headers.rs  mod.rs  value.rs
corex/src/http/: mod.rs  request_context.rs  request_handler.rs  request_template.rs
corex/src/lambda/: concurrent.rs  eval.rs  lambda.rs  list.rs  logic.rs  relation.rs
corex/src/valid/: cause.rs  valid.rs
enterprise-features/: Cargo.toml
enterprise-features/src/: enterprise.rs  lib.rs
examples-upstream/rust-grpc/: Cargo.toml  README.md  build.rs
examples-upstream/rust-grpc/src/: main.rs
examples/extension-i18n/: Cargo.toml  README.md  main.graphql
examples/extension-i18n/src/: main.rs  modify_ir_extension.rs  translate_extension.rs  translations.json
lambda/: Cargo.toml
lambda/deploy/: example.graphql  lambda.tf
lambda/src/: cache.rs  env.rs  file.rs  http.rs  main.rs
node/: Cargo.toml  package.json
node/example/: index.js  package.json  webpack.config.js
node/src/: cache.rs  env.rs  http.rs  lib.rs
tailcall-aws-lambda/: Cargo.toml
tailcall-aws-lambda/src/: error.rs  http.rs  main.rs  runtime.rs  worker_io.rs
tailcall-cloudflare/: Cargo.toml  package-lock.json  package.json  wrangler.toml
tailcall-cloudflare/src/: cache.rs  env.rs  error.rs  file.rs  handle.rs  http.rs  lib.rs  runtime.rs
tailcall-cloudflare/tests/: cf_tests.spec.ts  mf.ts
tailcall-core/: Cargo.toml
tailcall-core/src/: app_context.rs  async_cache.rs  directive.rs  has_headers.rs  lib.rs  runtime.rs  try_fold.rs
tailcall-core/src/blueprint/: blueprint.rs  dynamic_value.rs  into_schema.rs  mod.rs  upstream.rs
tailcall-core/src/config/: config.rs  config_module.rs  from_document.rs  reader.rs  reader_context.rs  source.rs
tailcall-core/src/core/: document.rs  mod.rs  print_schema.rs  runtime.rs
tailcall-core/src/data_loader/: data_loader.rs
tailcall-core/src/generator/: from_proto.rs  generator.rs  graphql_type.rs  source.rs
tailcall-core/src/graphql/: data_loader.rs  request_template.rs
tailcall-events/: Cargo.toml
tailcall-events/src/: analytics.rs  lib.rs
tailcall-http-cache/: Cargo.toml
tailcall-http-cache/src/: cache.rs  fs_cache.rs  http_cache_manager.rs  lib.rs
tailcall-http-client/: Cargo.toml
tailcall-http-client/src/: http.rs  lib.rs
tailcall-query-plan/: Cargo.toml
tailcall-query-plan/src/: lib.rs  plan.rs  resolver.rs
tailcall-query-plan/tests/: execution.rs
tailcall-serde-schema/: Cargo.toml  derived.rs
tailcall-serde-schema/benches/: criterion.rs
tailcall-serde-schema/data/: posts.json
tailcall-serde-schema/src/: de.rs  ignore.rs  lib.rs  main.rs  post.rs  schema.rs  value.rs
tailcall-tracker/: Cargo.toml
tailcall-tracker/src/: analytics.rs  can_track.rs  check_tracking.rs  dispatch.rs  error.rs  event.rs  ga_event.rs  helpers.rs  lib.rs  tracker.rs
tailcall-typedefs/: Cargo.toml
tailcall-typedefs/src/: entity.rs  functions.rs  gen_gql_schema.rs  graphql_writer.rs  main.rs  new_gen_gql_schema.rs  sservice-document.rs  static_vars.rs  to_graphql.rs  utils.rs
tailcall-upstream-grpc/: Cargo.toml  README.md  build.rs
tailcall-upstream-grpc/src/: error.rs  main.rs
tailcall-wasm/: Cargo.toml  README.md  build.rs  package.json
tailcall-wasm/.cargo/: config
tailcall-wasm/src/: builder.rs  cache.rs  env.rs  file.rs  http.rs  js_val.rs  lib.rs  runtime.rs
tc_cli/: Cargo.toml
tc_cli/src/: directive.rs  lib.rs  main.rs  print_schema.rs  try_fold.rs
tc_cloudflare/: Cargo.toml  package.json  wrangler.toml
tc_cloudflare/src/: lib.rs
tc_core/: Cargo.toml
tc_core/src/: document.rs  endpoint.rs  javascript.rs  lib.rs  path.rs
testconv/: Cargo.toml
testconv/src/: common.rs  execution.rs  http.rs  lib.rs  main.rs
testconv/tests/: execution_spec.rs  graphql_spec.rs
workers/: Cargo.toml  package.json  wrangler.toml
workers/src/: cache.rs  lib.rs
(+6046 files in other folders)
