[package]
name = "async-graphql-extension-apollo-tracing"
version = "3.2.11"
authors = ["Anthony Griffon <anthony@griffon.one>"]
description = "An async_graphql extension to send traces & metrics to Apollo Studio"
readme = "README.md"
repository = "https://github.com/async-graphql/async_graphql_apollo_studio_extension"
documentation = "https://docs.rs/async-graphql-extension-apollo-tracing"
license = "MIT"
keywords = ["async_graphql", "async", "graphql", "apollo", "studio"]
categories = ["network-programming", "asynchronous"]
edition = "2021"

[features]
default = ["tokio-comp", "compression"]
compression = ["libflate"]
tokio-comp = ["tokio"]

[dependencies]
anyhow = "1"
async-graphql = { version = "7.0.2", features = ["dynamic-schema"] }
async-trait = "0.1"
chrono = "0.4"
cfg-if = "1"
derive_builder = "0.13"
futures = "0.3"
futures-locks = "0.7"
prost = "0.12"
prost-types = "0.12"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tonic = "0.10"
tracing = "0.1"
tracing-futures = { version = "0.2.5", default-features = false, features = ["tokio", "futures-03", "std"] }
uuid = { version = "1.7", features = ["v4"] }                  # A library to generate and parse UUIDs.

# Non-feature optional dependencies
libflate = { version = "2", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tonic-build = "0.10"
