[package]
name = "autogen-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
anyhow = "1.0.79"
jsonschema = "0.17.1"
schemars = "0.8.16"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"