[package]
name = "autogen-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.35.1",features = ["macros"]}
env_logger = "0.10.1"
log = "0.4.20"
anyhow = "1.0.79"
schemars = "0.8.16"
serde_json = "1.0.111"
tailcall = {path = ".."}