[package]
name = "autogen"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
lazy_static = "1.4.0"
schemars = "0.8.16"
serde = "1.0.197"
serde_json = "1.0.114"
tailcall = { path = "../" }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
