[package]
name = "aws-lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.10.0"
lambda_runtime = "0.9.2"
tokio = { version = "1", features = ["macros", "fs"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

anyhow = "1.0.80"
async-trait = "0.1.77"
hyper = { version = "1.2.0", default-features = false }
http-body-util = "0.1.0"
reqwest = { version = "0.11", default-features = false }
tailcall = { path = "..", default-features = false }
