[package]
name = "cloudflare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hyper = { version = "0.14", default-features = false }
worker = "0.0.18"
tailcall = { path = "..", default-features = false }
lazy_static = "1.4.0"
anyhow = "1.0.79"
async-trait = "0.1.77"
reqwest = { version = "0.11", default-features = false }
async-std = "1.12.0"
wasm-logger = "0.2.0"
log = "0.4.20"
async-graphql-value = "7.0.1"
serde_json = "1.0.113"
serde_qs = "0.12.0"
console_error_panic_hook = "0.1.7"
protox = "0.6.0"

