[package]
name = "cloudflare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hyper = { version = "0.14", default-features = false }
worker = "0.0.20"
tailcall = { path = "..", default-features = false }
lazy_static = "1.4.0"
anyhow = "1.0.81"
async-trait = "0.1.77"
reqwest = { version = "0.11", default-features = false }
async-std = "1.12.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-subscriber-wasm = "0.1.0"
async-graphql-value = {git ="https://github.com/tailcallhq/async-graphql.git", branch = "add-setter"}
serde_json = "1.0.114"
serde_qs = "0.12.0"
console_error_panic_hook = "0.1.7"
protox = "0.6.0"

