[package]
name = "enterprise-features"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
keygen-rs = { git = "https://github.com/laststylebender14/keygen-rs.git", rev = "75ac67948c20bb3afb9bf48a8f77b80988a0401b" }