[package]
name = "enterprise-features"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
keygen-rs = { git = "https://github.com/laststylebender14/keygen-rs.git", rev = "388ce9c53679b6d2a5d16a92a5129f6919162f1e" }