[package]
name = "wasm-node"
version = "0.1.0"
edition = "2021"
keywords = [
"graphql",
"proxy",
"api-gateway",
"rust",
"http"
]
repository = "https://github.com/tailcallhq/tailcall"
authors = ["Sandipsinh Rathod"]
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
tailcall = {path = "..", default-features = false}
wasm-bindgen = "0.2.86"
cfg-if = "1.0.0"
wee_alloc = "0.4.5"
anyhow = "1.0.79"
reqwest = "0.11.23"
hyper = { version = "0.14", default-features = false }
async-std = {version = "1.12.0",features = ["unstable"]}
async-trait = "0.1.77"
dashmap = "5.5.3"
concurrent_lru = "0.2.0"
async-graphql-value = "7.0.1"
serde_json = "1.0.111"
wasm-bindgen-futures = "0.4.29"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
log = "0.4.20"