[package]
name = "tailcall-aws-lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.12.0"
lambda_runtime = "0.12.0"
tokio = { version = "1", features = ["macros", "fs"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }
dotenvy = "0.15.7"

anyhow = "1.0.82"
async-trait = "0.1.80"
async-graphql-value = "7.0.3"
hyper = { version = "0.14.28", default-features = false }
reqwest = { version = "0.11", default-features = false }
tailcall = { path = "..", default-features = false }
