[package]
name = "tailcall-cloudflare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hyper = { version = "0.14.28", default-features = false }
worker = "0.2.0"
tailcall = { path = "..", default-features = false }
lazy_static = "1.4.0"
anyhow = "1.0.82"
async-trait = "0.1.80"
reqwest = { version = "0.12", default-features = false }
async-std = "1.12.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-subscriber-wasm = "0.1.0"
serde_json = "1.0.116"
serde_qs = "0.13.0"
console_error_panic_hook = "0.1.7"
protox = "0.6.0"
async-graphql-value = "7.0.3"

