[package]
name = "tailcall-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
async-graphql = { version = "7.0.3", features = [
    "dynamic-schema",
    "dataloader",
    "apollo_tracing",
    "opentelemetry",
] }
futures-util = { version = "0.3.30" }
indexmap = "2.2.6"

tokio = { version = "1.37.0", features = ["rt", "time"] }
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
tracing = "0.1.40"
lazy_static = "1.4.0"
serde_json = { version = "1.0.116", features = ["preserve_order"] }
serde = { version = "1.0.200", features = ["derive"] }


mimalloc = { version = "0.1.41", default-features = false }
http-cache-reqwest = { version = "0.13.0", features = [
    "manager-moka",
], default-features = false }
moka = { version = "0.12.7", default-features = false, features = ["future"] }
hyper-rustls = { version = "0.25.0" }
rustls = { version = "0.23.5", features = ["std"], default-features = false }
rustls-pki-types = "1.5.0"
inquire = { version = "0.7.5" }
opentelemetry-otlp = { version = "0.15.0", features = [
    "trace",
    "logs",
    "metrics",
    # required to make grpc requests
    "tls-roots",
] }
opentelemetry-system-metrics = { version = "0.1.8" }

# dependencies safe for wasm:

rustls-pemfile = { version = "1.0.4" }
schemars = { version = "0.8.17", features = ["derive"] }
hyper = { version = "0.14.28", features = ["server"], default-features = false }
derive_setters = "0.1.6"
thiserror = "1.0.59"
serde_qs = "0.13"
serde_yaml = "0.9.34"
serde_urlencoded = "0.7.1"
url = { version = "2.5.0", features = ["serde"] }
once_cell = "1.19.0"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
regex = "1.10.4"
reqwest-middleware = "0.2.5"
async-trait = "0.1.80"
serde_path_to_error = "0.1.16"
cache_control = "0.2.0"
nom = "7.1.3"
exitcode = "1.1.2"
resource = "0.5.0"
stripmargin = "0.1.1"
num_cpus = "1.16.0"
fnv = "1.0.7"
futures-channel = { version = "0.3.30" }
futures-timer = { version = "3.0.3", features = ["wasm-bindgen"] }
lru = { version = "0.12.3" }
async-std = { version = "1.12.0", features = [
    "wasm-bindgen-futures",
    "unstable",
] }
ttl_cache = { version = "0.5.1", features = ["stats"] }
protox = "0.6.0"
protox-parse = "0.6.0"
prost-reflect = { version = "0.13.1", features = ["serde"] }
prost = "0.12.4"
update-informer = { version = "1.1.0", default-features = false, features = [
    "github",
    "reqwest",
] }

which = { version = "6.0.1" }
async-recursion = "1.1.1"
tempfile = "3.10.1"
rquickjs = { "version" = "0.5.1", features = ["full"] }
strum_macros = "0.26.2"

tracing-subscriber = { version = "0.3.18", features = [
    "default",
    "fmt",
    "env-filter",
] }
tracing-opentelemetry = "0.23.0"
getrandom = { version = "0.2.14", features = ["js"] }
prometheus = "0.13.4"
tonic = { version = "0.11.0", default-features = false }
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry = { version = "0.22.0", features = ["trace", "logs", "metrics"] }
opentelemetry_sdk = { version = "0.22.1", features = [
    "trace",
    "logs",
    "metrics",
] }
opentelemetry-http = "0.11.1"
opentelemetry-stdout = { version = "0.3.0", features = [
    "trace",
    "logs",
    "metrics",
] }
opentelemetry-appender-tracing = { version = "0.3.0" }
opentelemetry-prometheus = "0.15.0"
phonenumber = "0.3.4"
chrono = "0.4.38"
async-graphql-extension-apollo-tracing = { version = "3.2.15" }
headers = "0.3.9" # previous version until hyper is updated to 1+
mime = "0.3.17"
htpasswd-verify = { version = "0.3.0", git = "https://github.com/twistedfall/htpasswd-verify", rev = "ff14703083cbd639f7d05622b398926f3e718d61" } # fork version that is wasm compatible
jsonwebtoken = "9.3.0"
async-graphql-value = "7.0.3"
dotenvy = "0.15.7"
convert_case = "0.6.0"
rand = "0.8.5"
tailcall-macros = { path = "../tailcall-macros" }
tailcall-tracker = { path = "../tailcall-tracker" }
tonic-types = "0.11.0"
datatest-stable = "0.2.9"
tokio-test = "0.4.4"
base64 = "0.22.1"
tailcall-hasher = { path = "../tailcall-hasher" }

[dev-dependencies]
tailcall-prettier = { path = "../tailcall-prettier" }
criterion = "0.5.1"
httpmock = "0.7.0"
pretty_assertions = "1.4.0"
stripmargin = "0.1.1"
markdown = "1.0.0-alpha.17"
insta = { version = "1.38.0", features = ["json"] }
tempfile = "3.10.1"
temp-env = "0.3.6"
maplit = "1.0.2"
tailcall-fixtures = { path = "../tailcall-fixtures" }
