[package]
name = "tailcall-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
anyhow = "1.0.82"
lazy_static = "1.4.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.82", features = ["preserve_order"] }
machineid-rs = "1.2.4"
tokio = { version = "1.0.1", features = ["rt", "time"] }
tracing = "0.1.40"
