[package]
name = "tailcall-http-cache"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
http-cache-reqwest = { version = "0.13.0", default-features = false, features = ["manager-moka"] }
moka = { version = "0.12.7", default-features = false, features = [
    "future",
]}
http-cache-semantics = { version = "1.0.1", default-features = false, features = ["with_serde", "reqwest"]}
serde = "1.0.202"
async-trait = "0.1.80"
serde_json = { workspace = true }
cacache = { version = "13.0.0", default-features = false, features = ["tokio-runtime", "mmap"] }


[dev-dependencies]
url = { version = "2.5.0", features = ["serde"] }
reqwest = { workspace = true }
http = "0.2.12"
http-cache = "0.18.0"
tokio = { workspace = true }
anyhow = { workspace = true }