[package]
name = "tailcall-http-cache"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
http-cache-reqwest = { version = "0.13.0", default-features = false, features = ["manager-moka"] }
moka = { version = "0.12.7", default-features = false, features = [
    "future",
]}
http-cache-semantics = { version = "1.0.1", default-features = false, features = ["with_serde", "reqwest"]}
serde = "1.0.202"
async-trait = "0.1.80"

[dev-dependencies]
tokio = {version = "1.37.0", features = ["full"]}
url = { workspace = true }
reqwest = { workspace = true }
http = "0.2.12"
http-cache = "0.20.0"